# wrds_mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
src/wrds_mcp/: __init__.py  server.py
src/wrds_mcp/db/: __init__.py  connection.py
src/wrds_mcp/tools/: __init__.py  _schema_docs.py  _validation.py  bonds.py  catalog.py  comps.py  equity.py  financials.py  loans.py  query.py  ratings.py  screening.py
tests/: conftest.py  test_bonds.py  test_catalog.py  test_comps.py  test_connection.py  test_equity.py  test_financials.py  test_loans.py  test_query.py  test_ratings.py  test_screening.py  test_server.py
